SLCORE-1554 Update local storage and notify clients after changing dependency risk status